kubernetes/guestbookservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-service
  labels:
    app: guestbook-service
    visualize: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: guestbook-service
  template:
    metadata:
      labels:
        app: guestbook-service
        version: "latest"
        visualize: "true"
      annotations:
        visualizer/uses: mysql
    spec:
      containers:
      - name: guestbook-service
        image: 969692727193.dkr.ecr.us-east-1.amazonaws.com/dmin-guestbook:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "500m"
