kubernetes/ui-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: ui
    visualize: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
        version: "2.0"
        visualize: "true"
      annotations:
        visualizer/uses: helloworld-service,guestbook-service,redis
    spec:
      containers:
      - name: ui
        image: 969692727193.dkr.ecr.us-east-1.amazonaws.com/dmin-ui:v2
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        livenessProbe:
          initialDelaySeconds: 60
          httpGet:
            port: 8080
            path: /
        ports:
        - name: http
          containerPort: 8080
