kubernetes/ui-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ui
  labels:
    app: ui
    visualize: "true"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
  selector:
    app: ui
