kubernetes/zipkin-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: zipkin
  labels:
    app: zipkin
    visualize: "true"
spec:
  type: ClusterIP
  ports:
    - port: 9411
      targetPort: http
      name: http
  selector:
    app: zipkin
